# spectral-submodule1-1

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_test.sh  config.json  deps_generated.h  main.cpp  process_dependencies.sh  submodule1_1.cpp  submodule1_1.h
test/: test_submodule1_1.cpp
